src/test/ui/fuckit/typeck-live-code.stderr
error[E0308]: mismatched types
  --> $DIR/typeck-live-code.rs:3:5
   |
LL | fn live_code(s: &str) -> bool {
   |                          ---- expected `bool` because of return type
LL |     s
   |     ^ expected `bool`, found `&str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
